--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
     <div class="cy"> 
         <div class="images">
-            <img src="img/shape.png" class="shape">
-            <img src="img/ya.png" class="face">
+            <img src="shape.png" class="shape">
+            <img src="ya.png" class="face">
         </div>
 
         <nav>
@@ -69,7 +69,7 @@
             <h1 id="port">Portfolio</h1>
             <br>
                 <p>
-                    <img src="img/porto.png" alt="">
+                    <img src="porto.png" alt="">
                 </p>
             <h1 id="edu">Education & <span>Experience</span></h1>
             <br>
